--- a/Management-System/frontend/index.html
+++ b/Management-System/frontend/index.html
@@ -41,7 +41,7 @@
 
     <h1>Gestión de Clientes</h1>
 
-    <a onclick="" href="#" class="myButton">Agregar Cliente</a>
+    <a onclick="agregar()" href="#" class="myButton">Agregar Cliente</a>
 
     <div>
         <table id="customers">
